# netbox-lcm

./: MANIFEST.in  README.md  pyproject.toml
contrib/: configuration_lifecycle.py
netbox_lcm/: __init__.py  navigation.py  search.py  template_content.py  urls.py
netbox_lcm/api/: serializers.py  urls.py
netbox_lcm/choices/: backup.py  contract.py  software.py
netbox_lcm/constants/: __init__.py
netbox_lcm/filtersets/: __init__.py  backup.py  contract.py  device.py  hardware.py  license.py  software.py
netbox_lcm/forms/: bulk_edit.py  filtersets.py  model_forms.py
netbox_lcm/graphql/: filters.py  types.py
netbox_lcm/migrations/: 0001_initial.py  0002_license_licenseassignment.py  0003_remove_supportcontract_devices_and_more.py  0004_supportcontractassignment_and_more.py  0005_create_supportsku_and_more.py  0005_remove_supportcontract_manufacturer_supportsku_and_more.py  0006_alter_supportcontractassignment_assigned_object_type.py  0007_alter_hardwarelifecycle_options_and_more.py  0008_alter_supportcontractassignment_contract_and_more.py  0009_alter_licenseassignment_device.py  0010_licenseassignment_quantity.py  0011_alter_supportcontractassignment.py  0012_primarymodels.py  0013_fix_hardware_lifecycle_model.py  0014_licenseassignment_end_licenseassignment_start.py  0014_rename_last_contract_date_and_more.py  0015_alter_supportcontractassignment_contract.py  0016_alter_supportcontractassignment_license_and_more.py  0017_hardwarelifecycleplan.py  0018_alter_hardwarelifecycle_options.py  0018_alter_hardwarelifecycle_options_softwareproduct_and_more.py  (+14 more)
(+65 files in other folders)
