[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-lcm"
authors = [
    {name = "Nathan Reeves", email = "nathan.a.reeves@gmail.com"}
]
maintainers = [
    {name = "Nathan Reeves", email = "nathan.a.reeves@gmail.com"},
]
description = "NetBox Lifecycle Management Plugin"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["netbox-plugin", ]
version = "1.1.5"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    'django-polymorphic',
]

[project.urls]
Documentation = "https://github.com/uck9/netbox-lcm/blob/main/README.md"
Source = "https://github.com/uck9/netbox-lcm"
Tracker = "https://github.com/uck9/netbox-lcm/issues"

[tool.setuptools.packages.find]
exclude=["netbox_lcm.tests"]

[tool.black]
skip-string-normalization = 1